# smartCLI

./: README.md  config.json  main.py  pyproject.toml
nexcli/: __init__.py
nexcli/src/: questionaire.py  startCLI.py
nexcli/src/RAG/: loader.py  search.py
nexcli/src/RAG/chroma_db/: chroma.sqlite3
nexcli/src/RAG/sample_data/: current_goals.txt  projects.txt  skills.txt
nexcli/src/llm/: __init__.py  model.py
nexcli/src/utils/: imageProcessing.py  specialCommands.py
src/: config.json  init.py  questionaire.py  test.py
src/RAG/: __init__.py
src/RAG/sample_data/: character.txt  education.txt  interests.txt
src/llm/: model.py
