[project]
name = "nexcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "openai>=1.101.0",
    "prompt-toolkit>=3.0.51",
    "pyfiglet>=1.0.4",
    "rich>=14.1.0",
]

[project.scripts]
nexcli = "nexcli:main"
